# studying_c

./: CMakeLists.txt
data_structure/array_list/: array_list.c  array_list.h
data_structure/dynamic_array/: numbers.c  numbers.h
data_structure/linked_list/: linked_list.c  linked_list.h
pointer/: dynamic_array.c
